# CCDS

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/processed/: df.csv  df_metro.csv  df_nonmetro.csv
data/raw/: charlesaarundelcalvert.xlsx  dorstmarytalbot.xlsx  fredcarhow.xlsx
inst414/: balcityharfcecil.xlsx  garrettalleganywash.xlsx  kentqacaroline.xlsx  pgmontbalcoun.xlsx  wicosomerwor.xlsx
notebooks/: dataprocessing.ipynb  df_metro.csv  df_nonmetro.csv  eda.ipynb  regression.ipynb
results/: model1_summary.csv  model2_summary.csv
